enhanced concurrency for  generateReport method in ComputeService and removed manual lock to ensure maximum benefit of parallelism